wacc_test/sample_programs/invalid/semanticErr/structs/structMustBeDefinedFuncs.wacc
# a collection of functions that use structs as parameters (but dont use them) with an undefined struct

# Output:

# Output:

# Exit:
# 200

# Program:

begin
  int foo(struct MyStruct _Va1iD_v4r_n4m3) is
    return 0 
  end
  struct NotMyStruct begin
    int i;
  end
  int bar(struct MyStruct anyIdentifier123) is
    return 1
  end
  skip
end
